fix large-window vertical align in mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -145,9 +145,9 @@ main {
     bottom: 0;
     left: 0;
     border-radius: 50%;
-    display: flex;
+    /*display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
 }
 
 .promo h1,
@@ -166,9 +166,23 @@ main {
     font-size: 46px;
 }
 
+.promo {
+    margin-top: 175px;
+}
+
+/*.promo::before {
+    position: relative;
+    content: '';
+    height: 100%;
+    width: 0;
+    display: inline-block;
+    vertical-align: middle;
+}*/
+
 .cta {
     font-size: 20px;
-    margin-top: 15px;
+    width: 50%;
+    margin: 15px auto 0;
     border: 1px solid #fff;
     padding: 5px;
     /*transition: all 0.3s ease-in-out;*/
@@ -287,5 +301,6 @@ footer {
     margin-left: 10px;
     vertical-align: bottom;
     border-radius: 3px;
-    padding: 15px;
+    padding: 13px 15px;
+    color: #000;
 }
